--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
 
                 var creditCardValidator = {
                     FirstName : {
-                        required : true,
-                        validateText : true
+                        validateText : true, 
+                        required:true
                     }, 
                     LastName : {
                 		required : true,
@@ -228,7 +228,7 @@
 
                 var creditCardValidatorMessages = {
                    	FirstName : {
-                        required : 'First Name is required',
+                       
                         validateText : 'Invalid first name'
                     }, 
                     LastName : {
